Layout: logo fixed on mobile

--- a/src/components/Navigation/style.module.css
+++ b/src/components/Navigation/style.module.css
@@ -1,17 +1,11 @@
 .container {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
-}
-
-@media (min-width: 1100px) {
-    .container {
-        z-index: 2;
-    }
 }
 
 .nav {
@@ -39,7 +33,7 @@
     filter: drop-shadow(0.02em 0.02em 0px var(--yellow));
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     .container {
         gap: 0.5rem;
     }
